# nospoon

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  IOS-IMPL.md  README.md  TODO.md  WINDOWS-IMPL.md  WINDOWS.md  config.example.jsonc  flake.nix  module.nix  package-bare.nix  package-lock.json  package.json  package.nix  peers.example.json  shell.nix
.github/workflows/: build.yml  ios-build.yml
android/: .gitignore  README.md  build.sh  gradle.properties  package-lock.json  package.json  settings.gradle.kts  shell.nix
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nospoon/vpn/: ConfigEditorBottomSheet.kt  MainActivity.kt  NativeHelper.kt  NospoonVpnService.kt  VpnConfig.kt  VpnConfigAdapter.kt  VpnConfigRepository.kt
android/app/src/main/jni/: CMakeLists.txt  nospoon_exec.c
android/app/src/main/res/drawable/: bg_status_bar.xml  circle_status_connected.xml  circle_status_connecting.xml  circle_status_disconnected.xml  ic_paste.xml
android/app/src/main/res/layout/: activity_main.xml  dialog_config_editor.xml  item_vpn_config.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/worklet/: client.js  framing.js  routing.js
ios/: .gitignore  build.sh  package.json  project.yml
ios/PacketTunnel/: Info.plist  PacketTunnel.entitlements  PacketTunnelProvider.swift
ios/Shared/: Constants.swift
ios/addons/: addons.yml
ios/nospoon/: ConfigEditorView.swift  ContentView.swift  Info.plist  NospoonApp.swift  QRScannerView.swift  VpnConfig.swift  VpnManager.swift
ios/worklet/: client.js
lib/: binding.js  client.js  compat.js  config.js  framing.js  full-tunnel-darwin.js  full-tunnel-linux.js  full-tunnel-windows.js  full-tunnel.js  identity.js  platform-utils.js  server.js  swarm-topic.js  swarm.js  tun-darwin.js  tun-fd.js  tun-linux.js  tun-windows.js  tun.js  validation.js
native/: CMakeLists.txt  binding.c  package.json  tun-darwin.c  tun-linux.c  tun-windows.c
prebuilds/linux-arm64/: nospoon-tun.bare  nospoon-tun.node
prebuilds/linux-x64/: nospoon-tun.bare  nospoon-tun.node
test/: config.test.js  identity.test.js  swarm-logic.test.js  swarm-topic.test.js
